# aoc-2024

./: day1.py  day10.py  day12.py  day14.py  day16.py  day17.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day9.py  grid.py  os_utils.py  pyproject.toml  range.py  utils.py
2024/: day11.py  day12.py  day18.py  day20.py  day22.py  day23.py  day24.py  day5.py  day9.py  utils.py
2024/data/: day18.txt
y2022/: d1.py  d2.py  d3.py  d4.py
y2023/: d1.py  d16.py  d17.py  d18.py  d19.py  d2.py  d20.py  d21.py  d22.py  d23.py  d24.py  d25.py  d3.py  d4.py  d5.py
y2024/: d25.py  day13.py  day15.py  day19.py  day21.py  day6.py  day8.py
