[project]
name = "aoc-2024"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "attrs>=25.1.0",
    "ipdb>=0.13.13",
    "networkx>=3.4.2",
    "pytest>=8.3.4",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "ipython>=8.30.0",
    "ruff>=0.8.2",
]
